# social-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: post_instagram.py  post_threads  social_workflow.py  social_workflow_3source.py  test_chrome.py  test_playwright_cdp.py  test_sys_chrome.py
skills/: README.md
skills/facebook-mcp-browser-setup/: SKILL.md
skills/facebook-workflow/: SKILL.md
skills/instagram-workflow/: SKILL.md
skills/threads-composer-debug/: SKILL.md
social_mcp/: __init__.py  browser_hijack.py  chrome_session.py  mcp_server.py  meta_api.py  post_facebook.py  post_ig.py  post_ig_human.py  post_threads.py
