[project]
name = "social-mcp"
version = "0.1.0"
description = "Meta Social MCP — 操作 Facebook / Instagram / Threads，透過 Chrome CDP 讀取本地 cookies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mcp[cli]>=1.1.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
social-mcp = "social_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["social_mcp"]

[tool.ruff]
line-length = 100
